apps/jenkins/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jenkins
  namespace: cluster
spec:
  parentRefs:
    - name: default-gateway
      namespace: cluster
  hostnames:
    - jenkins.anyflow.net
  rules:
    - matches:
        - path:
            type: PathPrefix #Implementation-specific, PathPrefix, Exact
            value: /
      backendRefs:
        - name: jenkins
          port: 8080
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
